--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,15 @@
     "dev": "nodemon --ignore data/** server.mjs"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "websocket": "^1.0.34",
     "uuid": "^9.0.0",
-    "cors": "^2.8.5"
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
+    "eslint": "^9.38.0",
+    "eslint-plugin-sonarjs": "^3.0.5",
+    "jscpd": "^4.0.5",
     "nodemon": "^3.0.1"
   }
 }
